K Merged sorted Lists

--- a/AkramChaabnia_AbdelheqMokhtari_mohamedRaoufRazi.ipynb
+++ b/AkramChaabnia_AbdelheqMokhtari_mohamedRaoufRazi.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "id": "Xx6guTFuE3YO"
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -83,7 +83,7 @@
        "[1, 3]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,12 +92,12 @@
     "obj_importance = [10, 40, 30, 50]\n",
     "obj_sizes = [5, 4, 6, 3]\n",
     "car_space = 10\n",
-    "take_objects(obj_importance, obj_sizes, car_space)"
+    "take_objects(obj_importance, obj_sizes, car_space)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "id": "K2l0xDM7TiNR"
    },
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "id": "1mqagjSszFWn"
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -210,12 +210,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "bn54xrjOa8Ez"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Definition for singly-linked list.\n",
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import heapq\n",
+    "def mergeKLists(lists):\n",
+    "\n",
+    "    heap = []\n",
+    "        \n",
+    "    # Add the head of each list to the heap (only non-empty lists)\n",
+    "    for i, l in enumerate(lists):\n",
+    "        if l:\n",
+    "            heapq.heappush(heap, (l.val, i, l))\n",
+    "        \n",
+    "    # Dummy node to help build the merged linked list\n",
+    "    dummy = ListNode()\n",
+    "    current = dummy\n",
+    "        \n",
+    "    # Extract the smallest element from the heap, and advance that list\n",
+    "    while heap:\n",
+    "        # Pop the smallest element (based on node's value)\n",
+    "        val, i, node = heapq.heappop(heap)\n",
+    "            \n",
+    "        # Add the smallest node to the result list\n",
+    "        current.next = node\n",
+    "        current = current.next\n",
+    "            \n",
+    "        # If there is a next node in the list, add it to the heap\n",
+    "        if node.next:\n",
+    "            heapq.heappush(heap, (node.next.val, i, node.next))\n",
+    "        \n",
+    "    # Return the merged linked list, starting from dummy's next node\n",
+    "    return dummy.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> 1 -> 2 -> 3 -> 4 -> 4 -> 5 -> 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = ListNode(1, ListNode(4, ListNode(5)))\n",
+    "l2 = ListNode(1, ListNode(3, ListNode(4)))\n",
+    "l3 = ListNode(2, ListNode(6))\n",
+    "\n",
+    "merged_list = mergeKLists([l1, l2, l3])\n",
+    "\n",
+    "# Function to print the merged linked list\n",
+    "def print_list(node):\n",
+    "    while node:\n",
+    "        print(node.val, end=\" -> \" if node.next else \"\")\n",
+    "        node = node.next\n",
+    "    print()\n",
+    "\n",
+    "# Print the merged list\n",
+    "print_list(merged_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -237,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "id": "QVHKh-b9zcDm"
    },
@@ -262,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -276,7 +350,7 @@
      "output_type": "stream",
      "text": [
       "a list of size 10 Generate 3628800 different permutation \n",
-      "Time taken: 10159.83 ms\n"
+      "Time taken: 5544.12 ms\n"
      ]
     }
    ],
@@ -293,11 +367,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Partie \"Calcul Scientifique\"**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **NumPy: Régression Logistique**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "SlssbqmLO7cs"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
