sloving latin square

--- a/AkramChaabnia_AbdelheqMokhtari_mohamedRaoufRazi.ipynb
+++ b/AkramChaabnia_AbdelheqMokhtari_mohamedRaoufRazi.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -344,16 +344,7 @@
     "id": "5pEFBjFHMuhl",
     "outputId": "bb7d50f0-7ea6-4cb1-b695-ef7a12c3b982"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a list of size 10 Generate 3628800 different permutation \n",
-      "Time taken: 5544.12 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "# Test the performance\n",
@@ -364,6 +355,148 @@
     "\n",
     "# Print the time in milliseconds\n",
     "print(f\"a list of size {len(test_input)} Generate {len(result)} different permutation \\nTime taken: {(end_time - start_time) * 1000:.2f} ms\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Carrés latins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_combinations(n):\n",
+    "    # Fonction récursive pour générer toutes les combinaisons croissantes\n",
+    "    def recursive_combinations(current_combination, level, start):\n",
+    "        if level == n:  # Si la combinaison atteint la longueur n\n",
+    "            combinations.append(current_combination[:])  # Ajouter une copie de la combinaison\n",
+    "            return\n",
+    "        \n",
+    "        for i in range(start, n+1):  # Toujours aller de start à n pour éviter les permutations\n",
+    "            current_combination[level] = i\n",
+    "            recursive_combinations(current_combination, level + 1, i)  # Ne pas revenir en arrière\n",
+    "\n",
+    "    combinations = []\n",
+    "    current_combination = [0] * n  # Initialiser une combinaison vide de taille n\n",
+    "    recursive_combinations(current_combination, 0, 1)\n",
+    "    return combinations\n",
+    "\n",
+    "\n",
+    "def find_combinations_with_trace(n, target_trace):\n",
+    "    # Générer toutes les combinaisons croissantes de {1, 1, ..., 1} à {n, n, ..., n}\n",
+    "    all_combinations = generate_combinations(n)\n",
+    "    \n",
+    "    # Filtrer les combinaisons dont la somme des éléments diagonaux (la trace) correspond à target_trace\n",
+    "    valid_combinations = []\n",
+    "    for comb in all_combinations:\n",
+    "        trace = sum(comb[i] for i in range(n))  # Calcul de la trace (somme des diagonales)\n",
+    "        if trace == target_trace:\n",
+    "            valid_combinations.append(comb)\n",
+    "    \n",
+    "    return valid_combinations\n",
+    "\n",
+    "def initialize_matrix(n):\n",
+    "    i=0\n",
+    "    return [[0 for i in range(n)] for i in range(n)]\n",
+    "\n",
+    "\n",
+    "def fill_diagonal_with_combination(matrix, combination):\n",
+    "    # Remplir les éléments diagonaux de la matrice avec une combinaison donnée\n",
+    "    n = len(matrix)\n",
+    "    for i in range(n):\n",
+    "        matrix[i][i] = combination[i]  # Affecter chaque élément de la combinaison à la diagonale\n",
+    "\n",
+    "\n",
+    "def is_safe(matrix, row, col, num, n):\n",
+    "    # Vérifie si num peut être placé dans matrix[row][col] sans redondance dans la ligne et la colonne\n",
+    "    for i in range(n):\n",
+    "        if matrix[row][i] == num or matrix[i][col] == num:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "def solve_latin_square(matrix, n, row=0, col=0):\n",
+    "    # Si nous avons rempli la dernière colonne, passer à la prochaine ligne\n",
+    "    if col == n:\n",
+    "        col = 0\n",
+    "        row += 1\n",
+    "        if row == n:\n",
+    "            return True  # Matrice remplie sans conflit\n",
+    "\n",
+    "    # Si l'élément est déjà rempli (appartenant à la diagonale), passer à la prochaine case\n",
+    "    if matrix[row][col] != 0:\n",
+    "        return solve_latin_square(matrix, n, row, col + 1)\n",
+    "\n",
+    "    # Essayer d'affecter chaque nombre possible de 1 à n dans la case actuelle\n",
+    "    for num in range(1, n + 1):\n",
+    "        if is_safe(matrix, row, col, num, n):\n",
+    "            matrix[row][col] = num  # Tenter d'affecter num\n",
+    "\n",
+    "            # Continuer avec les prochaines cases\n",
+    "            if solve_latin_square(matrix, n, row, col + 1):\n",
+    "                return True\n",
+    "\n",
+    "            # Si cela cause un conflit, réinitialiser la case (backtracking)\n",
+    "            matrix[row][col] = 0\n",
+    "\n",
+    "    return False  # Pas de solution possible pour cette configuration\n",
+    "\n",
+    "\n",
+    "def generate_latin_square(n, target_trace):\n",
+    "    # Étape 1: Générer toutes les combinaisons possibles avec la trace\n",
+    "    valid_combinations = find_combinations_with_trace(n, target_trace)\n",
+    "    \n",
+    "    # Étape 2: Pour chaque combinaison, remplir la diagonale et compléter la matrice\n",
+    "    for combination in valid_combinations:\n",
+    "        # Initialiser la matrice avec des zéros\n",
+    "        matrix = initialize_matrix(n)\n",
+    "\n",
+    "        # Remplir la diagonale avec la combinaison actuelle\n",
+    "        fill_diagonal_with_combination(matrix, combination)\n",
+    "\n",
+    "        # Étape 3: Compléter le reste de la matrice en respectant la non-redondance\n",
+    "        if solve_latin_square(matrix, n):\n",
+    "            print(\"Solution trouvée avec la combinaison : \", combination)\n",
+    "            for row in matrix:\n",
+    "                print(row)\n",
+    "            print(\"\\n\")\n",
+    "        else:\n",
+    "            print(\"Impossible de compléter la matrice avec la combinaison : \", combination)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution trouvée avec la combinaison :  [1, 2, 3]\n",
+      "[1, 3, 2]\n",
+      "[3, 2, 1]\n",
+      "[2, 1, 3]\n",
+      "\n",
+      "\n",
+      "Solution trouvée avec la combinaison :  [2, 2, 2]\n",
+      "[2, 1, 3]\n",
+      "[3, 2, 1]\n",
+      "[1, 3, 2]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 3\n",
+    "target_trace = 6\n",
+    "generate_latin_square(n, target_trace)"
    ]
   },
   {
@@ -407,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
