add Markdown documentation for Logistic Regression implementation

--- a/AkramChaabnia_AbdelheqMokhtari_mohamedRaoufRazi.ipynb
+++ b/AkramChaabnia_AbdelheqMokhtari_mohamedRaoufRazi.ipynb
@@ -547,6 +547,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Code**\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -643,8 +651,170 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Documentation : Classe Logistic Regression**\n",
+    "---\n",
+    "**<u>Description</u>** :\n",
+    "\n",
+    "La classe LogisticRegression implémente la régression logistique avec deux méthodes d’optimisation : descente de gradient et méthode de Newton. Cette classe est conçue pour entraîner un modèle de classification binaire et effectuer des prédictions.\n",
+    "\n",
+    "**<u>Attributs</u>** :\n",
+    "\n",
+    "**<span style=\"color: green;\">max_iterations</span>** *(int)*:\n",
+    "\n",
+    "Nombre maximal d'itérations pour l'entraînement (par défaut : 1000).\n",
+    "\n",
+    "**<span style=\"color: green;\">learning_rate</span>** *(float)*:\n",
+    "\n",
+    "Taux d’apprentissage utilisé dans la descente de gradient (par défaut : 0.01).\n",
+    "\n",
+    "**<span style=\"color: green;\">optimization_method</span>** *(str)*:\n",
+    "\n",
+    "Méthode d'optimisation à utiliser ('gradient_descent' ou 'Newton' ; par défaut : 'gradient_descent').\n",
+    "\n",
+    "**<span style=\"color: green;\">weights</span>** *(ndarray)*:\n",
+    "\n",
+    "Les poids appris après l'entraînement.\n",
+    "\n",
+    "**<span style=\"color: green;\">bias</span>** *(float)*:\n",
+    "\n",
+    "Le biais appris après l'entraînement.\n",
+    "\n",
+    "**<span style=\"color: green;\">losses</span>** *(list)*:\n",
+    "\n",
+    "Une liste des valeurs de la perte enregistrées au cours des itérations.\n",
+    "\n",
+    "**<span style=\"color: green;\">accuracies</span>** *(list)*:\n",
+    "\n",
+    "Une liste des précisions calculées pendant les itérations (optionnel, non utilisé actuellement).\n",
+    "\n",
+    "**<u>Methods</u>** :\n",
+    "\n",
+    "<span style=\"color: blue;\">__init__</span> :\n",
+    "\n",
+    "Initialise le modèle de régression logistique avec des paramètres spécifiques.\n",
+    "\n",
+    "- **Paramètres**\n",
+    "  \n",
+    "    - **max_iterations** *(int)*:\n",
+    " \n",
+    "      Nombre maximal d’itérations pour l’entraînement.\n",
+    "\n",
+    "    - **learning_rate** *(float)*:\n",
+    " \n",
+    "      Taux d’apprentissage pour la descente de gradient.\n",
+    "  \n",
+    "    - **optimization_method** *(str)*:\n",
+    " \n",
+    "      Méthode d’optimisation ('gradient_descent' ou 'Newton').\n",
+    "  \n",
+    "\n",
+    "<span style=\"color: blue;\">__sigmoid(self,x)__</span> :\n",
+    "\n",
+    "\n",
+    "- **Paramètres**\n",
+    "  \n",
+    "    - **x** *(float or ndarray)*:\n",
+    " \n",
+    "      La ou les valeurs en entrée.\n",
+    "  \n",
+    "- **Retourne**\n",
+    "\n",
+    "    - *(float or ndarray)*:\n",
+    "\n",
+    "      Le résultat de la fonction sigmoïde\n",
+    "\n",
+    "  \n",
+    "\n",
+    "<span style=\"color: blue;\">__fit(self, X, y)__</span> :\n",
+    "\n",
+    "Entraîne le modèle de régression logistique avec les données fournies.\n",
+    "\n",
+    "- **Paramètres**\n",
+    "  \n",
+    "    - **X** *(ndarray)*:\n",
+    " \n",
+    "      Les données d’entrée, de taille (n_samples, n_features).\n",
+    "\n",
+    "    - **y** *(ndarray)*:\n",
+    "\n",
+    "      Les étiquettes de sortie, de taille (n_samples,).\n",
+    "  \n",
+    "- **Comportement**\n",
+    "\n",
+    "    - Utilise la méthode d’optimisation spécifiée.\n",
+    "    - Met à jour les poids et le biais du modèle.\n",
+    "    - Suit la perte à chaque itération.\n",
+    "\n",
+    "<span style=\"color: blue;\">__gradient_descent(self, X, y)__</span> :\n",
+    "\n",
+    "Optimise les poids et le biais à l’aide de la méthode de descente de gradient.\n",
+    "\n",
+    "- **Paramètres**\n",
+    "  \n",
+    "    - **X** *(ndarray)*:\n",
+    " \n",
+    "      Les données d’entrée, de taille (n_samples, n_features).\n",
+    "\n",
+    "    - **y** *(ndarray)*:\n",
+    "\n",
+    "      Les étiquettes de sortie, de taille (n_samples,).\n",
+    "  \n",
+    "- **Comportement**\n",
+    "\n",
+    "    - Met à jour les poids et le biais à l’aide du gradient de la fonction de perte.\n",
+    "    - Enregistre la perte à chaque itération.\n",
+    "\n",
+    "<span style=\"color: blue;\">__Newton_method(self, X, y)__</span> :\n",
+    "\n",
+    "Optimise les poids et le biais à l’aide de la méthode de Newton.\n",
+    "\n",
+    "- **Paramètres**\n",
+    "  \n",
+    "    - **X** *(ndarray)*:\n",
+    " \n",
+    "      Les données d’entrée, de taille (n_samples, n_features).\n",
+    "\n",
+    "    - **y** *(ndarray)*:\n",
+    "\n",
+    "      Les étiquettes de sortie, de taille (n_samples,).\n",
+    "  \n",
+    "- **Comportement**\n",
+    "\n",
+    "    - Calcule le gradient et la matrice Hessienne de la fonction de perte.\n",
+    "    - Met à jour les poids et le biais en utilisant la règle de mise à jour de Newton.\n",
+    "    - Enregistre la perte à chaque itération.\n",
+    "\n",
+    "<span style=\"color: blue;\">__Predict(self, X)__</span> :\n",
+    "\n",
+    "Effectue des prédictions pour les données fournies en entrée.\n",
+    "\n",
+    "- **Paramètres**\n",
+    "  \n",
+    "    - **X** *(ndarray)*:\n",
+    " \n",
+    "      Les données d’entrée, de taille (n_samples, n_features).\n",
+    "  \n",
+    "- **Retourne**\n",
+    "\n",
+    "    - *(ndarray)*:\n",
+    "\n",
+    "        Les prédictions (valeurs binaires : 0 ou 1) pour chaque exemple."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test et évaluation sur les trois  jeux de données\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
