Refactor notebook structure and add explanatory markdowns

--- a/AkramChaabnia_AbdelheqMokhtari_mohamedRaoufRazi.ipynb
+++ b/AkramChaabnia_AbdelheqMokhtari_mohamedRaoufRazi.ipynb
@@ -6,7 +6,7 @@
     "id": "RURcSD_OE7Qh"
    },
    "source": [
-    "# Partie \"Problem Solving\"\n"
+    "# Partie 1 \"Problem Solving\"\n"
    ]
   },
   {
@@ -15,23 +15,17 @@
     "id": "fQnn9kQEGGs5"
    },
    "source": [
-    "## Vacance et bagage"
+    "## 1. Vacance et bagage\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "FtxRnTToHaD8"
-   },
+   "metadata": {},
    "source": [
-    "Vous allez en vacances et vous avez un nombre d'objets à prendre avec vous, cependant, il n'y pas assez d'éspace pour tout prendre dans votre voiture.\n",
-    "Vous essayez donc d'assigner un nombre à chaque objet représentant son importance tout en lui assignant un nombre representant l'espace qu'il va prendre dans la voiture. Déterminez les objets à inclure afin que vous ne dépassiez pas la limite d'espace dans la voiture et que l'importance totale des objets inclues soit la plus élevée possible.\n",
-    "Créer une fonction take_objects(obj_importance, obj_sizes, car_space) où:\n",
-    "obj_sizes de taille nobjets représente les poids de chaque objet.\n",
-    "obj_importance de taille nobjets représente l'importance de chaque objet.\n",
-    "car_space est l'espace totale disponible dans la voiture.\n",
-    "Essayer de trouver une solution avec la meilleure complexité possible.\n",
-    "\n"
+    "### Implementation\n",
+    "---\n",
+    "Cette implémentation utilise la méthode de programmation dynamique pour résoudre ce problème, qui est un exemple classique du problème du \"sac à dos\" (Knapsack Problem)."
    ]
   },
   {
@@ -67,6 +61,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cet algorithme est optimal pour résoudre ce problème.\n",
+    "\n",
+    "La complexité temporelle de l'algorithme est **𝑂(𝑛 × car_space)** et la complexité en espace est également  **𝑂(𝑛 × car_space)**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test simple\n",
+    "---\n",
+    "Dans cette section, nous allons tester l'algorithme avec un cas simple pour vérifier son bon fonctionnement. Nous utilisons un exemple avec quatre objets ayant différentes tailles et importances, et une capacité de voiture limitée à 10"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -96,8 +108,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Case\n",
+    "---\n",
+    "Dans cette section, nous allons tester l'algorithme avec plusieurs cas d'essai stockés dans un fichier texte. Le fichier contient différentes configurations d'objets, de tailles, et de capacité de voiture, ainsi que les résultats attendus pour chaque cas. Nous utilisons ces cas pour évaluer l'exactitude de l'algorithme en comparant les résultats obtenus avec ceux attendus. Le fichier de test est lu, chaque cas est traité, et la fonction take_objects est exécutée pour chaque scénario. Les résultats obtenus sont ensuite comparés aux résultats attendus pour déterminer si l'algorithme passe ou échoue à chaque test.\n",
+    "\n",
+    "Ce processus garantit que l'algorithme fonctionne correctement pour une variété de scénarios."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {
     "id": "K2l0xDM7TiNR"
    },
@@ -162,6 +185,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ⚠️ Attention : \n",
+    "\n",
+    "Veuillez noter que pour exécuter correctement la section des **Test Cases**, le fichier de test doit être présent dans le chemin spécifié : `TestCase/vac_bag.txt`. Si ce fichier n'est pas trouvé, la cellule contenant le test ne fonctionnera pas correctement. Cependant, cela **n'affectera pas l'exécution des autres cellules** du notebook, et l'algorithme continuera de fonctionner normalement pour les autres sections. Assurez-vous que le fichier est correctement placé pour éviter toute erreur dans cette section spécifique."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
@@ -190,22 +222,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "dHQiqLU4aaqN"
-   },
+   "metadata": {},
    "source": [
-    "## Fusionner plusieurs listes triées"
+    "### Testez votre propre exemple\n",
+    "---\n",
+    "À présent, c'est à vous de jouer ! Entrez votre propre cas de test ci-dessous et voyez comment l'algorithme réagit avec votre exemple."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "20qTB4WyayIy"
+    "id": "dHQiqLU4aaqN"
    },
    "source": [
-    "Pendant le cours, on vous a montré comment fusionner deux listes triées en une seule liste triée. Ici, on vous demande de faire la même chose, mais avec un nombre quelconque de listes triées.\n",
-    "Étant donné un tableau \"lists\" contenant k listes, chaque liste est triée par ordre croissant. Fusionnez toutes les listes chaînées en une seule liste chaînée triée en ordre croissant et renvoyez-la.\n",
-    "Attention, il y a un moyen de faire ça en O(nlog(k)) où n est la taille totale des listes et k est le nombre de listes. Donner la solution la plus optimale possible"
+    "## 2. Fusionner plusieurs listes triées\n",
+    "---"
    ]
   },
   {
@@ -297,16 +328,8 @@
     "id": "6oKfGJ2Kb5fr"
    },
    "source": [
-    "## Permutation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "PG14wYaaL1XJ"
-   },
-   "source": [
-    "Étant donné un tableau nums d'entiers distincts, retourner toutes les permutations possibles. Vous pouvez retourner la réponse dans n'importe quel ordre. Par exemple:"
+    "## 3. Permutation\n",
+    "---"
    ]
   },
   {
@@ -370,7 +393,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Carrés latins"
+    "## 5. Carrés latins\n",
+    "---"
    ]
   },
   {
@@ -808,7 +832,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test et évaluation sur les trois  jeux de données\n",
+    "### Test et évaluation sur les trois  jeux de données\n",
     "---"
    ]
   },
